--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -6,5 +6,12 @@
   </head>
   <body>
     <h1>Welcome to IronTumblr</h1>
+    <form action="/logout" method="post">
+      <button type="submit">Logout</button>
+    </form>
+    <a href="/login">Log In</a> <br>
+    <a href="/signup">Sign Up</a> <br>
+    <a href="/posts">View Posts</a> <br>
+    <a href="/posts/new">Create Post</a>
   </body>
 </html>
